test/bad/generics/def02.px

func f<>(): Void def
    return
